test image pushing

--- a/.github/workflows/aws_push_scraper_image.yml
+++ b/.github/workflows/aws_push_scraper_image.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ master ]
 
-name: Node Project `my-app` CI on ECR
+name: Funda scraper image to ECR
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+        aws-region: eu-west-2
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -31,7 +31,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
-        IMAGE_TAG: 1.0
+        IMAGE_TAG: latest
       run: |
         # Build a docker container and push it to ECR
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
