--- a/.github/workflows/aws_push_scraper_image.yml
+++ b/.github/workflows/aws_push_scraper_image.yml
@@ -30,12 +30,12 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
+        ECR_REPOSITORY: funda-link-scraper
         IMAGE_TAG: latest
       run: |
         # Build a docker container and push it to ECR
-        echo "${{ env.ECR_REPOSITORY }} reporepo"
-        docker build -t ${{ env.ECR_REPOSITORY }} .
+        echo "$ECR_REPOSITORY reporepo"
+        docker build -t $ECR_REPOSITORY .
         docker tag funda-link-scraper:latest 766485280553.dkr.ecr.eu-west-2.amazonaws.com/funda-link-scraper:latest
         echo "Pushing image to ECR..."
         docker push 766485280553.dkr.ecr.eu-west-2.amazonaws.com/funda-link-scraper:latest
