--- a/.github/workflows/aws_push_scraper_image.yml
+++ b/.github/workflows/aws_push_scraper_image.yml
@@ -35,8 +35,7 @@ jobs:
       run: |
         # Build a docker container and push it to ECR
         echo "$ECR_REPOSITORY reporepo"
-        docker build -t $ECR_REPOSITORY .
-        docker tag funda-link-scraper:latest 766485280553.dkr.ecr.eu-west-2.amazonaws.com/funda-link-scraper:latest
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
-        docker push 766485280553.dkr.ecr.eu-west-2.amazonaws.com/funda-link-scraper:latest
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
