try different tree structure

--- a/link_scraper/Dockerfile
+++ b/link_scraper/Dockerfile
@@ -5,7 +5,7 @@ COPY link_scraper ${LAMBDA_TASK_ROOT}
 COPY library ${LAMBDA_TASK_ROOT}
 
 # Install dependencies
-COPY requirements.txt .
+COPY ./link_scraper/requirements.txt .
 RUN pip3 install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
 CMD ["launcher.main"]
