--- a/link_scraper/scraper/scrapy.cfg
+++ b/link_scraper/scraper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = fundascraper.settings
+default = link_scraper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = fundascraper
+project = link_scraper
