--- a/link_scraper/Dockerfile
+++ b/link_scraper/Dockerfile
@@ -1,8 +1,8 @@
 FROM public.ecr.aws/lambda/python:3.8
 
 # Copy function code
-COPY link_scraper ${LAMBDA_TASK_ROOT}
-COPY library ${LAMBDA_TASK_ROOT}
+COPY link_scraper ${LAMBDA_TASK_ROOT}/link_scraper
+COPY library ${LAMBDA_TASK_ROOT}/library
 
 # Install dependencies
 COPY ./link_scraper/requirements.txt .
