--- a/.github/workflows/aws_push_cleaner_image.yml
+++ b/.github/workflows/aws_push_cleaner_image.yml
@@ -1,12 +1,12 @@
 on:
   push:
     branches: [ master ]
-    paths: [ link_scraper/**, library/** ]
+    paths: [ link_cleaner/**, library/** ]
   pull_request:
     branches: [ master ]
-    paths: [ link_scraper/**, library/** ]
+    paths: [ link_cleaner/**, library/** ]
 
-name: Funda link scraper image to ECR
+name: Funda link cleaner image to ECR
 
 jobs:
   deploy:
@@ -32,11 +32,11 @@ jobs:
       id: build-and-push-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: funda-link-scraper
+        ECR_REPOSITORY: funda-link-cleaner
         IMAGE_TAG: latest
       run: |
         # Build a docker container and push it to ECR
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./link_scraper/Dockerfile .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./link_cleaner/Dockerfile .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
