--- a/.github/workflows/aws_push_cleaner_image.yml
+++ b/.github/workflows/aws_push_cleaner_image.yml
@@ -33,6 +33,7 @@ jobs:
       env:
         IMAGES_TO_DELETE: aws ecr list-images --region eu-west-2 --repository-name funda-link-cleaner --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json
       run: |
+        echo "$GITHUB_CONTEXT"
         echo "$IMAGES_TO_DELETE"
         aws ecr batch-delete-image --region eu-west-2 --repository-name funda-link-cleaner --image-ids "$IMAGES_TO_DELETE" || true
 
