--- a/.github/workflows/aws_push_cleaner_image.yml
+++ b/.github/workflows/aws_push_cleaner_image.yml
@@ -30,11 +30,8 @@ jobs:
 
     - name: Delete all untagged images as to only have one image in ECR (billing purposes)
       id: delete-untagged-images
-      env:
-        IMAGES_TO_DELETE: aws ecr list-images --region eu-west-2 --repository-name funda-link-cleaner --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json
       run: |
-        echo "$GITHUB_CONTEXT"
-        echo "$IMAGES_TO_DELETE"
+        IMAGES_TO_DELETE=$( aws ecr list-images --region eu-west-2 --repository-name funda-link-cleaner --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
         aws ecr batch-delete-image --region eu-west-2 --repository-name funda-link-cleaner --image-ids "$IMAGES_TO_DELETE" || true
 
     - name: Build, tag, and push the image to Amazon ECR
