--- a/.github/workflows/aws_push_model_trainer_image.yml
+++ b/.github/workflows/aws_push_model_trainer_image.yml
@@ -12,6 +12,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env:
+      ECR_REPOSITORY: funda-model-trainer
 
     steps:
     - name: Checkout
@@ -32,18 +34,23 @@ jobs:
       id: build-and-push-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: funda-model-trainer
         IMAGE_TAG: latest
       run: |
         # Build a docker container and push it to ECR
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./model_trainer/Dockerfile .
+        docker build -t $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG -f ./model_trainer/Dockerfile .
         echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG"
 
     - name: Update AWS lambda function code
       id: update-lambda-function-code
       env:
         IMAGE_URI: ${{ steps.build-and-push-image.outputs.image }}
       run: |
-        aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:766485280553:function:funda-model-trainer --image-uri $IMAGE_URI
+        aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:766485280553:function:${{ env.ECR_REPOSITORY }} --image-uri $IMAGE_URI
+
+    - name: Delete all untagged images as to only have one image in ECR (for billing purposes)
+      id: delete-untagged-images
+      run: |
+        IMAGES_TO_DELETE=$( aws ecr list-images --region eu-west-2 --repository-name ${{ env.ECR_REPOSITORY }} --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json )
+        aws ecr batch-delete-image --region eu-west-2 --repository-name ${{ env.ECR_REPOSITORY }} --image-ids "$IMAGES_TO_DELETE" || true
